--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "ffmpeg-static": "^4.4.0",
         "fluent-ffmpeg": "^2.1.2",
         "tslint": "^6.1.3",
+        "typedoc": "^0.22.4",
         "youtube-sr": "^4.1.7",
         "ytdl-core": "^4.9.1"
     },
     "devDependencies": {
         "@types/node": "^16.10.1",
+        "jsmin": "^1.0.1",
         "nodemon": "^2.0.13",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.3"
