--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"experimentalDecorators": true,
 		"importHelpers": true,
 		"forceConsistentCasingInFileNames": true,
-		"lib": ["es2017", "esnext.asynciterable"],
+		"lib": ["es2017", "esnext.asynciterable", "DOM"],
 		"moduleResolution": "node"
 	},
 	"exclude": ["node_modules"]
