fixed formatTime function added support for .env rather than using config.ts

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "name": "discordbot",
+    "version": "1.0.0",
+    "main": "index.ts",
     "dependencies": {
         "@discordjs/opus": "^0.6.0",
         "@discordjs/voice": "^0.6.0",
@@ -21,6 +24,18 @@
         "typescript": "^4.4.3"
     },
     "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/choco-green/DiscordBot.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/choco-green/DiscordBot/issues"
+    },
+    "homepage": "https://github.com/choco-green/DiscordBot#readme",
+    "description": ""
 }
