--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
         "@discordjs/opus": "^0.6.0",
         "@discordjs/voice": "^0.6.0",
         "discord-player": "^5.1.0",
-        "discord.js": "^13.1.0"
+        "discord.js": "^13.1.0",
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.3"
     },
     "devDependencies": {
         "@types/node": "^16.10.1",
         "dotenv": "^10.0.0",
         "nodemon": "^2.0.13",
-        "ts-node": "^10.2.1",
-        "tslint": "^6.1.3",
-        "typescript": "^4.4.3"
+        "tslint": "^6.1.3"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon"
+        "dev": "nodemon",
+        "start": "ts-node src/index.ts"
     },
     "repository": {
         "type": "git",
