--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@discordjs/voice": "^0.6.0",
         "discord-player": "^5.1.0",
         "discord.js": "^13.1.0",
+        "discordjs-button-embed-pagination": "^4.0.0",
         "dotenv": "^10.0.0",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.3"
