--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "discord-player": "^5.1.0",
         "discord.js": "^13.1.0",
         "dotenv": "^10.0.0",
+        "mongodb": "^4.1.2",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.3"
     },
