--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     },
     "devDependencies": {
         "@types/node": "^16.10.1",
+        "@typescript-eslint/eslint-plugin": "^4.32.0",
+        "@typescript-eslint/parser": "^4.32.0",
         "nodemon": "^2.0.13",
         "tslint": "^6.1.3"
     },
