--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "tslint": "^6.1.3"
     },
     "scripts": {
-        "dev": "nodemon",
+        "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\"",
         "start": "ts-node src/index.ts"
     },
     "repository": {
